--- a/SantexAcademy/back/package.json
+++ b/SantexAcademy/back/package.json
@@ -5,10 +5,10 @@
   "config": {},
   "scripts": {
     "prod": "node ./bin/www",
-    "start": "node ./bin/www",
+    "start": "node ./bin/app",
     "clean": "rimraf ./node_modules",
     "lint-staged": "npx lint-staged",
-    "live": "nodemon server.js",
+    "live": "nodemon ./bin/app",
     "db:create": "./node_modules/.bin/sequelize db:create",
     "db:migrate": "./node_modules/.bin/sequelize db:migrate",
     "db:migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
