--- a/SantexAcademy/back/package.json
+++ b/SantexAcademy/back/package.json
@@ -24,12 +24,16 @@
     "express-session": "^1.17.3",
     "express-validator": "6.6.1",
     "helmet": "^4.6.0",
+    "jsonwebtoken": "^9.0.1",
     "lint-staged": "^10.5.4",
     "moment": "^2.29.4",
     "morgan": "~1.10.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "sequelize": "^6.29.0",
     "sequelize-cli": "^6.6.0",
+    "sqlite3": "^5.1.6",
     "winston": "^3.8.2",
     "winston-daily-rotate-file": "^4.7.1",
     "winston-transport": "^4.5.0",
