--- a/SantexAcademy/back/package.json
+++ b/SantexAcademy/back/package.json
@@ -8,7 +8,7 @@
     "start": "node ./bin/app",
     "clean": "rimraf ./node_modules",
     "lint-staged": "npx lint-staged",
-    "live": "nodemon ./bin/app",
+    "start:dev": "nodemon ./bin/app",
     "db:create": "./node_modules/.bin/sequelize db:create",
     "db:migrate": "./node_modules/.bin/sequelize db:migrate",
     "db:migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
