configuracion basica para utilizar sequelize-cli

--- a/SantexAcademy/back/package.json
+++ b/SantexAcademy/back/package.json
@@ -10,10 +10,10 @@
     "lint-staged": "npx lint-staged",
     "seed": "node ./config/seed",
     "start:dev": "nodemon ./bin/app",
-    "db:create": "./node_modules/.bin/sequelize db:create",
-    "db:migrate": "./node_modules/.bin/sequelize db:migrate",
-    "db:migrate:undo": "./node_modules/.bin/sequelize db:migrate:undo",
-    "db:seed:all": "./node_modules/.bin/sequelize db:seed:all"
+    "db:create": "npx sequelize-cli db:create",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:undo": "npx sequelize-cli db:migrate:undo",
+    "db:seed:all": "npx sequelize-cli db:seed:all"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
