--- a/SantexAcademy/front/.gitignore
+++ b/SantexAcademy/front/.gitignore
@@ -1,6 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 .database.sqlite
+../back/.database.sqlite
 
 # Compiled output
 /dist
