--- a/SantexAcademy/front/package.json
+++ b/SantexAcademy/front/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@swimlane/ngx-charts": "^20.4.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
@@ -29,6 +30,9 @@
     "@angular-devkit/build-angular": "^14.2.11",
     "@angular/cli": "~14.2.11",
     "@angular/compiler-cli": "^14.2.0",
+    "@types/d3-scale": "^4.0.5",
+    "@types/d3-selection": "^3.0.7",
+    "@types/d3-shape": "^3.1.3",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
